--- a/publications.htm
+++ b/publications.htm
@@ -71,6 +71,15 @@
 
 -->
 
+
+    <table class="Pubs"><td>
+        <p class="Indented12LR">57. Zolkind P, Dunn GP, Lin T, <strong class="NameHighlight">Griffith M</strong>, Griffith OL, Uppaluri R.<em class="TitleHighlight">Neoantigens in immunotherapy and personalized vaccines: Implications for head and neck squamous cell carcinoma</em>. <strong><a href="https://www.journals.elsevier.com/oral-oncology/">Oral Oncology</a></strong>. 2016 Oct 14. pii: S1368-8375(16)30175-0.
+		<br><a href="https://www.ncbi.nlm.nih.gov/pubmed/27751760">abstract</a> | <a href="http://www.oraloncology.com/article/S1368-8375(16)30175-0/fulltext">full text</a> | <a href="http://www.oraloncology.com/article/S1368-8375(16)30175-0/pdf">pdf</a> | <a href="http://www.oraloncology.com/article/S1368-8375(16)30175-0/fulltext">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1016/j.oraloncology.2016.09.010&src=bookmarklet">altmetric stats</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1016/j.oraloncology.2016.09.010" align="center"></div>
+    </p><br>
+    </td></table>
+
     <table class="Pubs"><td>
         <p class="Indented12LR">56. Skidmore ZL, Wagner AH, Lesurf R, Campbell KM, Kunisaki J, Griffith OL, <strong class="NameHighlight">Griffith M</strong>. <em class="TitleHighlight">GenVisR: Genomic Visualizations in R</em>. <strong><a href="http://bioinformatics.oxfordjournals.org/">Bioinformatics</a></strong>. 2016 Oct 1;32(19):3012-4.
 		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/27288499">abstract</a> | <a href="https://doi.org/10.1093/bioinformatics/btw325">full text</a> | <a href="https://academic.oup.com/bioinformatics/article-pdf/32/19/3012/6687890/btw325.pdf">pdf</a> | <a href="https://academic.oup.com/bioinformatics/article-lookup/doi/10.1093/bioinformatics/btw325#supplementary-data">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1093/bioinformatics/btw325&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=12023460862648584550">google scholar citations (2)</a>
@@ -79,19 +88,16 @@
         </p><br>
     </td></table>
 
-
     <table class="Pubs"><td>
-            <p class="Indented12LR">55. Ainscough BJ, <strong class="NameHighlight">Griffith M</strong>, Coffman AC, Wagner AH, Kunisaki J, Choudhary MN, McMichael JF, Fulton RS, Wilson RK, Griffith OL, Mardis ER.<em class="TitleHighlight">DoCM: a database of curated mutations in cancer</em>. <strong><a href="http://www.nature.com/nmeth/index.html">Nature Methods</a></strong>. 2016 Sep 29;13(10):806-7.
+        <p class="Indented12LR">55. Ainscough BJ, <strong class="NameHighlight">Griffith M</strong>, Coffman AC, Wagner AH, Kunisaki J, Choudhary MN, McMichael JF, Fulton RS, Wilson RK, Griffith OL, Mardis ER.<em class="TitleHighlight">DoCM: a database of curated mutations in cancer</em>. <strong><a href="http://www.nature.com/nmeth/index.html">Nature Methods</a></strong>. 2016 Sep 29;13(10):806-7.
 		<br><a href="https://www.ncbi.nlm.nih.gov/pubmed/27684579">abstract</a> | <a href="http://www.nature.com/nmeth/journal/v13/n10/full/nmeth.4000.html">full text</a> | <a href="http://www.nature.com/nmeth/journal/v13/n10/full/nmeth.4000.pdf">pdf</a> | <a href="http://www.nature.com/nmeth/journal/v13/n10/abs/nmeth.4000.html#supplementary-information">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1038/nmeth.4000&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=11943890081256936417">google scholar citations (1)</a>
 		</td><td>
     <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/nmeth.4000" align="center"></div>
     </p><br>
     </td></table>
 
-
-
     <table class="Pubs"><td>
-            <p class="Indented12LR">54. Griffith OL, Chan SR, <strong class="NameHighlight">Griffith M</strong>, Krysiak K, Skidmore ZL, Hundal J, Allen JA, Arthur CD, Runci D, Bugatti M, Miceli AP, Schmidt H, Trani L, Kanchi KL, Miller CA, Larson DE, Fulton RS, Vermi W, Wilson RK, Schreiber RD, Mardis ER. <em class="TitleHighlight">Truncating Prolactin Receptor Mutations Promote Tumor Growth in Murine Estrogen Receptor-Alpha Mammary Carcinomas</em>. <strong><a href="http://www.cell.com/cell-reports/home">Cell Reports</a></strong>. 2016 Sep 27;17(1):249-60.
+        <p class="Indented12LR">54. Griffith OL, Chan SR, <strong class="NameHighlight">Griffith M</strong>, Krysiak K, Skidmore ZL, Hundal J, Allen JA, Arthur CD, Runci D, Bugatti M, Miceli AP, Schmidt H, Trani L, Kanchi KL, Miller CA, Larson DE, Fulton RS, Vermi W, Wilson RK, Schreiber RD, Mardis ER. <em class="TitleHighlight">Truncating Prolactin Receptor Mutations Promote Tumor Growth in Murine Estrogen Receptor-Alpha Mammary Carcinomas</em>. <strong><a href="http://www.cell.com/cell-reports/home">Cell Reports</a></strong>. 2016 Sep 27;17(1):249-60.
 		<br><a href="https://www.ncbi.nlm.nih.gov/pubmed/27681435">abstract</a> | <a href="http://dx.doi.org/10.1016/j.celrep.2016.08.076">full text</a> | <a href="http://www.cell.com/cell-reports/pdf/S2211-1247(16)31172-X.pdf">pdf</a> | <a href="http://www.cell.com/cell-reports/fulltext/S2211-1247(16)31172-X">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1016/j.celrep.2016.08.076&src=bookmarklet">altmetric stats</a>
 		</td><td>
     <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1016/j.celrep.2016.08.076" align="center"></div>
@@ -99,7 +105,7 @@
     </td></table>
 
     <table class="Pubs"><td>
-            <p class="Indented12LR">53. Miller CA, Gindin Y, Lu C, Griffith OL, <strong class="NameHighlight">Griffith M</strong>, Shen D, Hoog J, Li T, Larson DE, Watson M, Davies SR, Hunt K, Suman VJ, Snider J, Walsh T, Colditz GA, DeSchryver K, Wilson RK, Mardis ER, Ellis MJ.  <em class="TitleHighlight">Aromatase inhibition remodels the clonal architecture of estrogen-receptor-positive breast cancers</em>. <strong><a href="http://www.nature.com/ncomms/">Nature Communications</a></strong>.
+        <p class="Indented12LR">53. Miller CA, Gindin Y, Lu C, Griffith OL, <strong class="NameHighlight">Griffith M</strong>, Shen D, Hoog J, Li T, Larson DE, Watson M, Davies SR, Hunt K, Suman VJ, Snider J, Walsh T, Colditz GA, DeSchryver K, Wilson RK, Mardis ER, Ellis MJ.  <em class="TitleHighlight">Aromatase inhibition remodels the clonal architecture of estrogen-receptor-positive breast cancers</em>. <strong><a href="http://www.nature.com/ncomms/">Nature Communications</a></strong>.
 		<br><a href="https://www.ncbi.nlm.nih.gov/pubmed/27502118">abstract</a> | <a href="http://www.nature.com/articles/ncomms12498">full text</a> | <a href="http://www.nature.com/articles/ncomms12498.pdf">pdf</a> | <a href="http://www.nature.com/articles/ncomms12498#supplementary-information">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1038/ncomms12498&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=2083756316931502358">google scholar citations (6)</a>
 		</td><td>
     <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/ncomms12498" align="center"></div>
