--- a/publications.htm
+++ b/publications.htm
@@ -71,6 +71,13 @@
 
 -->
 
+    <table class="Pubs"><td>
+        <p class="Indented12LR">58. Krysiak K, Gomez F, White BS, Matlock M, Miller CA, Trani L, Fronick CC, Fulton RS, Kreisel F, Cashen AF, Carson KR, Berrien-Elliott MM, Bartlett NL, <strong class="NameHighlight">Griffith M</strong>, Griffith OL, Fehniger TA<em class="TitleHighlight">Recurrent somatic mutations affecting B-cell receptor signaling pathway genes in follicular lymphoma</em>. <strong><a href="http://www.bloodjournal.org/">Blood</a></strong>. 2016 Nov 14. pii: blood-2016-07-729954.
+		<br><a href="https://www.ncbi.nlm.nih.gov/pubmed/28064239">abstract</a> | <a href="http://www.bloodjournal.org/content/129/4/473.long">full text</a> | <a href="http://www.bloodjournal.org/content/129/4/473.full.pdf">pdf</a> | <a href="http://www.bloodjournal.org/content/129/4/473.full">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1182/blood-2016-07-729954&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=14741757351914273683">google scholar citations (2)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1182/blood-2016-07-729954" align="center"></div>
+    </p><br>
+    </td></table>
 
     <table class="Pubs"><td>
         <p class="Indented12LR">57. Zolkind P, Dunn GP, Lin T, <strong class="NameHighlight">Griffith M</strong>, Griffith OL, Uppaluri R.<em class="TitleHighlight">Neoantigens in immunotherapy and personalized vaccines: Implications for head and neck squamous cell carcinoma</em>. <strong><a href="https://www.journals.elsevier.com/oral-oncology/">Oral Oncology</a></strong>. 2016 Oct 14. pii: S1368-8375(16)30175-0.
