--- a/publications.htm
+++ b/publications.htm
@@ -71,6 +71,15 @@
 
 -->
 
+
+    <table class="Pubs"><td>
+            <p class="Indented12LR">59. <strong class="NameHighlight">Griffith M</strong>*, Spies NC*, Krysiak K*, McMichael JF, Coffman AC, Danos AM, Ainscough BJ, Ramirez CA, Rieke DT, Kujan L, Barnell EK, Wagner AH, Skidmore ZL, Wollam A,  Liu CJ, Jones MR, Bilski RL, Lesurf R, Feng YY, Shah NM, Bonakdar M, Trani L, Matlock M, Ramu A, Campbell KM, Spies GC, Graubert AP, Gangavarapu K, Eldred JM,  Larson DE, Walker JR, Good BM, Wu C, Su AI, Dienstmann R, Margolin AA, Tamborero  D, Lopez-Bigas N, Jones SJ, Bose R, Spencer DH, Wartman LD, Wilson RK, Mardis ER, Griffith OL.<em class="TitleHighlight">CIViC is a community knowledgebase for expert crowdsourcing the clinical interpretation of variants in cancer</em>. <strong><a href="http://www.nature.com/ng/">Nature Genetics</a></strong>.
+		<br><a href="https://www.ncbi.nlm.nih.gov/pubmed/28138153">abstract</a> | <a href="http://www.nature.com/ng/journal/v49/n2/full/ng.3774.html">full text</a> | <a href="http://www.nature.com/ng/journal/v49/n2/pdf/ng.3774.pdf">pdf</a> | <a href="http://www.nature.com/ng/journal/v49/n2/full/ng.3774.html#supplementary-information">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1038/ng.3774&src=bookmarklet">altmetric stats</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/ng.3774" align="center"></div>
+    </p><br>
+    </td></table>
+
     <table class="Pubs"><td>
         <p class="Indented12LR">58. Krysiak K, Gomez F, White BS, Matlock M, Miller CA, Trani L, Fronick CC, Fulton RS, Kreisel F, Cashen AF, Carson KR, Berrien-Elliott MM, Bartlett NL, <strong class="NameHighlight">Griffith M</strong>, Griffith OL, Fehniger TA<em class="TitleHighlight">Recurrent somatic mutations affecting B-cell receptor signaling pathway genes in follicular lymphoma</em>. <strong><a href="http://www.bloodjournal.org/">Blood</a></strong>. 2016 Nov 14. pii: blood-2016-07-729954.
 		<br><a href="https://www.ncbi.nlm.nih.gov/pubmed/28064239">abstract</a> | <a href="http://www.bloodjournal.org/content/129/4/473.long">full text</a> | <a href="http://www.bloodjournal.org/content/129/4/473.full.pdf">pdf</a> | <a href="http://www.bloodjournal.org/content/129/4/473.full">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1182/blood-2016-07-729954&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=14741757351914273683">google scholar citations (2)</a>
