--- a/research.htm
+++ b/research.htm
@@ -45,7 +45,7 @@
 		<br>
 		<p class="Indented12LR_bold">Personal statement</p>
     <p class="Indented12LR">
-    I am an Assistant Professor of Genetics and Assistant Director of the McDonnell Genome Institute at Washington University School of Medicine. I have more than 13 years 
+    I am an Assistant Professor of Medicine and Assistant Director of the McDonnell Genome Institute at Washington University School of Medicine. I have more than 13 years 
     of experience in the fields of genomics, bioinformatics, data mining, and cancer research. My research is focused on improving our understanding of cancer biology and 
     the development of personalized medicine strategies for cancer using genomics and informatics technologies. I develop bioinformatics and statistical methods for the analysis 
     of high throughput sequence data and identification of biomarkers for diagnostic, prognostic and drug response prediction. In collaboration with our Genomics Tumor Board, 
