add google analytics

--- a/cv.htm
+++ b/cv.htm
@@ -5,6 +5,15 @@
 	<meta name="description" content="Curriculum Vitae (CV - Resume) for Malachi Griffith, BSc, PhD">
 	<meta name="keywords" content="Malachi Griffith, Contact Details, RNA-Seq, Genomics, Bioinformatics, Cancer Research, CV, Resume">
 	<link rel="stylesheet" type="text/css" href="MalachiGriffith.css">
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106795788-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
+
+    gtag('config', 'UA-106795788-1');
+  </script>
 </head>
 
 <body>
