--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 	<meta name="description" content="Academic, professional and personal website of Malachi Griffith, BSc, PhD">
 	<meta name="keywords" content="Malachi Griffith, Genome Sciences Center, BC Cancer Agency, Washington University School of Medicine, WashU, The Genome Insitute, Marco Marra, Elaine Mardis, Contact Details, RNA-Seq, Illumina sequencing, Genomics, Bioinformatics, Cancer Research, CV, Resume">
 	<link rel="stylesheet" type="text/css" href="MalachiGriffith.css">
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106795788-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
 
+    gtag('config', 'UA-106795788-1');
+  </script>
 </head>
 
 <body>
