--- a/funding.htm
+++ b/funding.htm
@@ -52,7 +52,7 @@
 		<br>
         <p class="Indented12LR_bold">Current support</p>
 		<p class="Indented12LR">My research is supported by a Pathway to Independence Award from the <a href="http://www.nih.gov/">National Institutes of Health (NIH)</a>, 
-        						<a href="https://www.genome.gov/">National Human Genome Research Institute (NHGRI)</a> (Award: <a href="https://projectreporter.nih.gov/project_info_description.cfm?aid=8891755">K99 HG007940</a>).
+        <a href="https://www.genome.gov/">National Human Genome Research Institute (NHGRI)</a> (Award: <a href="https://projectreporter.nih.gov/project_info_description.cfm?aid=8891755">K99 HG007940</a>) and a V Scholar Award from the <a href="https://www.jimmyv.org/grants-awarded/">V Foundation</a>.
         						<a href="http://genome.wustl.edu/">The McDonnell Genome Institute</a>, of <a href="http://wustl.edu/">Washington University</a> 
         						<a href="http://medschool.wustl.edu/">School of Medicine</a> also supports my research. I have an academic appointment in the <a href="http://genetics.wustl.edu/">Department of Genetics</a> and 
                                 I am a member of the <a href="http://www.siteman.wustl.edu/">Siteman Cancer Center</a></p><br>
