update tools and profiles

--- a/cv.htm
+++ b/cv.htm
@@ -55,19 +55,24 @@
 
 			For a complete CV and references please contact me using the information available on my <a href="contact.htm">Contact</a> page.<br><br>
 
-			Briefly, I completed a Bachelor of Science with Honors in Biochemistry and Biology in 2002, followed by additional university training in computer programming.  
-			I worked as a molecular biologist and then as a computational biologist during 2003-2004 before beginning a PhD in Medical Genetics and Bioinformatics
-			at the University of British Columbia. I defended my PhD thesis in December, 2009, and my diploma was awarded in May 2010.
-			During 2010, I was employed as a Bioinformatics Postdoctoral Fellow at the Genome Sciences Centre, a department of the British Columbia Cancer Agency in Vancouver, Canada.<br><br>
+			Briefly, I completed a Bachelor of Science with Honors in Biochemistry and Biology in 2002, 
+            followed by additional university training in computer programming. I worked as a molecular biologist 
+            and then as a computational biologist during 2003-2004 before beginning a PhD in Medical Genetics and Bioinformatics
+			at the University of British Columbia. I defended my PhD thesis in December, 2009, and my diploma was 
+            awarded in May 2010. During 2010, I was employed as a Bioinformatics Postdoctoral Fellow at the Genome 
+            Sciences Centre, a department of the British Columbia Cancer Agency in Vancouver, Canada.<br><br>
 
-			I am now employeed as an Assistant Professor of Genetics and as an Assistant Director of the McDonnell Genome Institute at the Washington University School of Medicine.
-			My research program is focused on the use of genomics and bioinformatics methods for the development of precision medicine in cancer. 
+			I am now employeed as an Assistant Professor of Medicine (and Genetics) and as an Assistant Director of the McDonnell Genome 
+            Institute at Washington University School of Medicine. My research program is focused on the use of genomics, immunogenomics, and 
+            bioinformatics methods for the development of precision medicine in cancer. 
             For more details refer to the <a href="research.htm">research</a> and <a href="publications">publications</a> sections. 
         </p><br>
         
 		<p class="Indented12LR_bold">Online profiles</p>        
 		<p class="Indented12LR">
-      WashU MGI Faculty page: <a href="http://genome.wustl.edu/people/griffith_malachi">Profile</a><br>
+            WashU Medicine Faculty page: <a href="https://oncology.wustl.edu/people/faculty/Griffith_M/Griffith_M_Bio.html">Profile</a><br>
+            WashU Genome Faculty page: <a href="https://www.genome.wustl.edu/people/malachi-griffith/">Profile</a><br>
+            WashU Profiles page: <a href="https://profiles.wustl.edu/en/persons/malachi-griffith">Profile</a><br>
 			Linked In: <a href="http://www.linkedin.com/in/malachigriffith">Profile</a><br>
             Twitter: <a href="http://www.twitter.com/malachigriffith">Feed</a><br>
             Google Scholar: <a href="http://scholar.google.com/citations?user=fcIQQ3oAAAAJ&hl=en">Profile</a><br>
@@ -82,8 +87,8 @@
 			SeqAnswers: <a href="http://seqanswers.com/forums/search.php?searchid=1795608">Profile</a><br>
 			Code Academy: <a href="http://www.codecademy.com/malachig">Profile</a><br>
 			Iterative Genomics Consulting: <a href="http://www.itgenomics.com/">Company website</a><br>
-      Flickr: <a href="http://www.flickr.com/photos/d4rkst4r7/">Photostream</a><br>
-     </p><br>
+            Flickr: <a href="http://www.flickr.com/photos/d4rkst4r7/">Photostream</a><br>
+        </p><br>
         
 		<p class="Indented12LR_bold">Bioinformatics tools/software projects</p>        
 		<p class="Indented12LR">The following table lists selected tools that I have contributed to.  Some of the more recent examples are listed first.
@@ -97,46 +102,53 @@
   <tr>
     <td class="Head">Tool/Resource</td> <td class="Head">Source Code</td> <td class="Head">Description</td> <td class="Head">Current Status</td>
   </tr>
- 
+
   <tr>
-    <td class="Data"><a href="https://civic.genome.wustl.edu/#/home">CIVIC</a></td> 
-    <td class="Data"><a href="https://github.com/genome/civic-server">civic-server git repo</a>, <a href="https://github.com/genome/civic-client">civic-client git repo</a></td> 
+    <td class="Data"><a href="http://pvactools.org">pVACtools (pVACseq, pVACfuse, pVACvector, pVACviz, ...)</a></td> 
+    <td class="Data"><a href="https://github.com/griffithlab/pVACtools">git repo</a></td> 
+    <td class="Data">A toolkit for prioritization of neoantigen candidates for cancer immunotherapy</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="https://civicdb.org">CIVIC</a></td> 
+    <td class="Data"><a href="https://github.com/griffithlab/civic-server">civic-server git repo</a>, <a href="https://github.com/genome/civic-client">civic-client git repo</a></td> 
     <td class="Data">Clinical Interpretation of Variants in Cancer</td> 
     <td class="Data">Active</td>
   </tr>
 
   <tr>
-    <td class="Data"><a href="http://docm.genome.wustl.edu/">DOCM</a></td> 
-    <td class="Data"><a href="https://github.com/genome/docm">git repo</a></td> 
-    <td class="Data">The Database of Curated Mutations</td> 
+    <td class="Data"><a href="https://pmbio.org">PMBIO</a></td> 
+    <td class="Data"><a href="https://github.com/griffithlab/pmbio.org">git repo</a></td> 
+    <td class="Data">Precision Medicine Bioinformatics. Introduction to bioinformatics for DNA and RNA sequence analysis</td> 
     <td class="Data">Active</td>
   </tr>
 
   <tr>
-    <td class="Data"><a href="http://dgidb.genome.wustl.edu/">DGIdb</a></td> 
-    <td class="Data"><a href="https://github.com/genome/dgi-db">git repo</a></td> 
+    <td class="Data"><a href="http://vatools.org">VAtools</a></td> 
+    <td class="Data"><a href="https://github.com/griffithlab/VAtools">git repo</a></td> 
+    <td class="Data">Tools to annotate VCF files with expression and readcount data</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="http://dgidb.org">DGIdb</a></td> 
+    <td class="Data"><a href="https://github.com/griffithlab/dgi-db">git repo</a></td> 
     <td class="Data">The gene drug interaction database</td> 
     <td class="Data">Active</td>
   </tr>
 
   <tr>
-    <td class="Data"><a href="https://github.com/griffithlab/rnaseq_tutorial/wiki">RNA-seq.wiki</a></td> 
-    <td class="Data"><a href="https://github.com/griffithlab/rnaseq_tutorial">git repo</a></td> 
+    <td class="Data"><a href="https://rnabio.org/">RNAbio</a></td> 
+    <td class="Data"><a href="https://github.com/griffithlab/rnabio.org">git repo</a></td> 
     <td class="Data">Informatics for RNA-seq: A web resource for analysis on the cloud</td> 
     <td class="Data">Active</td>
   </tr>
 
   <tr>
-    <td class="Data"><a href="https://github.com/griffithlab/regtools">RegTools</a></td> 
+    <td class="Data"><a href="http://regtools.org">RegTools</a></td> 
     <td class="Data"><a href="https://github.com/griffithlab/regtools">git repo</a></td> 
     <td class="Data">Tools that integrate DNA-seq and RNA-seq data to help interpret mutations in a regulatory and splicing context</td> 
-    <td class="Data">Active</td>
-  </tr>
-
-  <tr>
-    <td class="Data"><a href="https://github.com/griffithlab/pVAC-Seq">pVAC-seq</a></td> 
-    <td class="Data"><a href="https://github.com/griffithlab/pVAC-Seq">git repo</a></td> 
-    <td class="Data">A pipeline for prioritization of neoantigen candidates for cancer immunotherapy</td> 
     <td class="Data">Active</td>
   </tr>
  
@@ -155,17 +167,24 @@
   </tr>
 
   <tr>
-    <td class="Data"><a href="https://github.com/genome/gms">GMS</a></td> 
-    <td class="Data"><a href="https://github.com/genome/gms">core git repo</a>, <a href="https://github.com/genome/genome">installer git repo</a></td> 
-    <td class="Data">Genome Modeling System: A Knowledge Management Platform for Genomics</td> 
-    <td class="Data">Active</td>
-  </tr>
-
-  <tr>
     <td class="Data"><a href="https://github.com/genome/sciclone">SciClone</a></td> 
     <td class="Data"><a href="https://github.com/genome/sciclone">git repo</a></td> 
     <td class="Data">A package for inferring the subclonal architecture of tumors</td> 
     <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="http://docm.info/">DOCM</a></td> 
+    <td class="Data"><a href="https://github.com/griffithlab/docm">git repo</a></td> 
+    <td class="Data">The Database of Curated Mutations</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="https://github.com/genome/gms">GMS</a></td> 
+    <td class="Data"><a href="https://github.com/genome/gms">core git repo</a>, <a href="https://github.com/genome/genome">installer git repo</a></td> 
+    <td class="Data">Genome Modeling System: A Knowledge Management Platform for Genomics</td> 
+    <td class="Data">Retired</td>
   </tr>
 
   <tr>
