update tools and profiles

--- a/cv.htm
+++ b/cv.htm
@@ -104,7 +104,7 @@
   </tr>
 
   <tr>
-    <td class="Data"><a href="http://pvactools.org">pVACtools (pVACseq, pVACfuse, pVACvector, pVACviz, ...)</a></td> 
+    <td class="Data"><a href="http://pvactools.org">pVACtools (pVACseq)</a></td> 
     <td class="Data"><a href="https://github.com/griffithlab/pVACtools">git repo</a></td> 
     <td class="Data">A toolkit for prioritization of neoantigen candidates for cancer immunotherapy</td> 
     <td class="Data">Active</td>
