--- a/contact.htm
+++ b/contact.htm
@@ -59,13 +59,17 @@
 		<p class="Indented12LR">
         			Assistant Professor, Department of Genetics, Washington University School of Medicine<br>
                     Assistant Director, McDonnell Genome Institute, Washington University School of Medicine<br> 
-					Email: mgriffit[no_bots]@genome.wustl.edu<br>
+					Email: mgriffit[no_bots]@wustl.edu<br>
 					Address:<br>						
 					Campus Box 8501<br>
 					4444 Forest Park Ave<br>
 					St. Louis, MO, USA, 63108<br>
 					Phone: 314-286-1274<br><br>
+                    Twitter: <a href="http://www.twitter.com/malachigriffith"><img src="http://twitter-badges.s3.amazonaws.com/t_mini-a.png" alt="Follow malachigriffith on Twitter"/></a><br>
 					Linked In: <a href="http://www.linkedin.com/in/malachigriffith" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="http://www.linkedin.com/img/webpromo/btn_in_20x15.gif" width="20" height="15" alt="View Malachi Griffith's LinkedIn profile" style="vertical-align:middle" border="0">View Malachi Griffith's profile</span></a><br><br>
+                    WashU Medicine Faculty page: <a href="https://oncology.wustl.edu/people/faculty/Griffith_M/Griffith_M_Bio.html">Profile</a><br>
+                    WashU Genome Faculty page: <a href="https://www.genome.wustl.edu/people/malachi-griffith/">Profile</a><br>
+                    WashU Profiles page: <a href="https://profiles.wustl.edu/en/persons/malachi-griffith">Profile</a><br>
                     Google Scholar: <a href="http://scholar.google.com/citations?user=fcIQQ3oAAAAJ&hl=en">Citations</a><br>
                     My NCBI: <a href="http://www.ncbi.nlm.nih.gov/myncbi/browse/collection/46519286/?sort=date&direction=descending">Bibliography</a><br>
                     ORCID: <a href="http://orcid.org/0000-0002-6388-446X">Profile</a><br>
@@ -73,11 +77,9 @@
                     Researcher ID: <a href="http://www.researcherid.com/rid/P-1285-2014">Profile</a><br>
                     Scopus: <a href="http://www.scopus.com/authid/detail.url?authorId=7102075315">Profile</a><br>
 					Research Gate: <a href="http://www.researchgate.net/profile/Malachi_Griffith/">Profile</a><br>
-                                	Twitter: <a href="http://www.twitter.com/malachigriffith"><img src="http://twitter-badges.s3.amazonaws.com/t_mini-a.png" alt="Follow malachigriffith on Twitter"/></a><br>
-                                	Faculty profile: <a href="http://genome.wustl.edu/people/griffith_malachi">WASHU</a><br>
 					BioStar: <a href="http://www.biostars.org/user/profile/3034/">Profile</a><br>
-                                	Flickr: <a href="http://www.flickr.com/photos/d4rkst4r7/">Photostream</a><br>
-								</p><br>
+                    Flickr: <a href="http://www.flickr.com/photos/d4rkst4r7/">Photostream</a><br>
+					</p><br>
 								
 		<p class="Indented12LR">Note: Remove the text '[no_bots]' from the email address above.</p>
 		<br>
