--- a/index.html
+++ b/index.html
@@ -68,22 +68,24 @@
                     <a href="http://www.alexaplatform.org/index.htm">ALEXA</a>,
                     <a href="http://www.alexaplatform.org/alexa_seq/">ALEXA-seq</a>,
 					<a href="http://www.oreganno.org/oregano/">ORegAnno</a>, 
-                    <a href="http://dgidb.genome.wustl.edu/">DGIdb</a>,
-                    <a href="https://github.com/genome/gms">GMS</a>,
-                    <a href="https://github.com/griffithlab/rnaseq_tutorial/wiki">RNA-seq.wiki</a>,
-                    <a href="http://docm.genome.wustl.edu/">DOCM</a>,
-                    <a href="https://civic.genome.wustl.edu/#/home">CIVIC</a>,
+                    <a href="http://dgidb.org">DGIdb</a>,
+                    <a href="http://rnabio.org">RNAbio</a>,
+                    <a href="http://docm.info">DOCM</a>,
+                    <a href="https://civicdb.org">CIVIC</a>,
                     <a href="https://github.com/genome/sciclone">SciClone</a>,
-                    <a href="https://github.com/griffithlab/GenVisR">GenVisR</a>,
-                    <a href="https://github.com/griffithlab/regtools">RegTools</a>,
-                    <a href="https://github.com/griffithlab/pVAC-Seq">pVAC-seq</a>.
+                    <a href="http://genviz.org">GenVisR</a>,
+                    <a href="http://regtools.org">RegTools</a>,
+                    <a href="http://pvactools.org">pVACtools</a>,
+                    <a href="http://vatools.org">VAtools</a>,
+                    <a href="https://pmbio.org">PMBIO</a>.
 					</p>
 
 					<br>
 					<p class="Indented12LR_bold">Current/Past Affiliations</p>
                     <p class="Indented12LR">
                     <a href="http://www.griffithlab.org">Griffith Lab</a>,
-					<a href="http://genome.wustl.edu/people/griffith_malachi">WASHU MGI</a>,
+                    <a href="https://oncology.wustl.edu/people/faculty/Griffith_M/Griffith_M_Bio.html">WASHU Oncology</a>,
+					<a href="https://www.genome.wustl.edu/people/malachi-griffith/">WASHU MGI</a>,
                     <a href="http://www.siteman.wustl.edu/">Siteman Cancer Center</a>,
                     <a href="https://www.ubc.ca/">UBC</a>,
    					<a href="http://www.bcgsc.ca">BCGSC</a>, 
