--- a/research.htm
+++ b/research.htm
@@ -48,40 +48,41 @@
 <!--- expandable content section -->
 <table cellpadding="0" cellspacing="0" width="752" class="Content">
 	<tr>
-		<td>
-		<br>
-		<p class="Indented12LR_s16_Bold">Research interests</p>
-		<br>
-		<p class="Indented12LR_bold">Personal statement</p>
+	<td>
+	<br>
+	<p class="Indented12LR_s16_Bold">Research interests</p>
+	<br>
+	<p class="Indented12LR_bold">Personal statement</p>
     <p class="Indented12LR">
-    I am an Assistant Professor of Medicine and Assistant Director of the McDonnell Genome Institute at Washington University School of Medicine. I have more than 13 years 
+    I am an Assistant Professor of Medicine and Assistant Director of the McDonnell Genome Institute at Washington University School of Medicine. I have more than 15 years 
     of experience in the fields of genomics, bioinformatics, data mining, and cancer research. My research is focused on improving our understanding of cancer biology and 
-    the development of personalized medicine strategies for cancer using genomics and informatics technologies. I develop bioinformatics and statistical methods for the analysis 
+    the development of personalized medicine strategies for cancer using genomics and informatics technologies. I develop bioinformatics methods for the analysis 
     of high throughput sequence data and identification of biomarkers for diagnostic, prognostic and drug response prediction. In collaboration with our Genomics Tumor Board, 
-    I am currently leading analyses of sequence data from the genomes and transcriptomes of living cancer patients that have exhausted standard-of-care treatment options. 
+    I have led the analyses of sequence data from the genomes and transcriptomes of living cancer patients that have exhausted standard-of-care treatment options. 
     I am also leading the analysis of several large-scale genomics projects to help discover genomic signatures relevant to cancer initiation, progression and treatment response. 
     I am an instructor for the Canadian Bioinformatics Workshops and Cold Spring Harbor Laboratory high-throughput sequencing workshop series. I have received numerous competitive 
     research awards from the Natural Sciences and Engineering Research Council, University of Winnipeg, University of British Columbia, National Cancer Institute of Canada and 
     British Columbia Cancer Agency. I was also a Junior and Senior Trainee of the Michael Smith Foundation for Health Research. I was profiled as an "up and coming" investigator in 
-    Genome Technology Magazine and listed in Wired Magazine second annual smart list as an emerging talent. Most recently, I was awarded an NHGRI K99 Pathway to Independence 
+    Genome Technology Magazine and listed in Wired Magazine second annual smart list as an emerging talent. I was awarded an NHGRI K99/R00 Pathway to Independence 
     Award to developed integrated analysis and interpretation methods for whole genome, exome and transcriptome sequence data in cancer. In particular, I am focused on applying these 
-    methods to better understand the regulatory consequence of somatic mutations that are otherwise of unknown functional significance. I have also made substantial contributions 
-    to open source and open access resources for the scientific community including creation of platforms for alternative expression analysis 
-    (<a href="http://www.alexaplatform.org/">www.alexaplatform.org</a>), regulatory region annotation (<a href="http://www.oreganno.org">www.oreganno.org</a>), mining drug-gene 
+    methods to better understand the regulatory consequence of somatic mutations that are otherwise of unknown functional significance. Immunogenomics and development of personalized
+    cancer immunotherapies has become a major focus of my research program. I was name a V Scholar by the V Foundation for Cancer Research who are currently supporting my development
+    of immungenomics approaches to improve personalized cancer vaccines. I have also made substantial contributions to open source and open access resources for the scientific 
+    community including creation of platforms for alternative expression analysis (<a href="http://www.alexaplatform.org/">www.alexaplatform.org</a>), regulatory region annotation (<a href="http://www.oreganno.org">www.oreganno.org</a>), mining drug-gene 
     interactions (<a href="http://www.dgidb.org">www.dgidb.org</a>), genome analysis development (<a href="https://github.com/genome/gms">https://github.com/genome/gms</a>), 
     curation of functional cancer mutations (<a href="http://www.docm.info">www.docm.info</a>), the clinical interpretation of variants in cancer 
-    (<a href="http://www.civicdb.org">www.civicdb.org</a>). I have published 39 papers with major areas of focus in precision medicine, AML, colon cancer, lung cancer, cancer genomics, 
-    cancer biomarkers, sequence analysis, and alternative splicing. The following paragraphs describe some general contributions to science and provide an overview of my current 
-    research interests. For more specific details refer to the <a href="publications.htm">publications</a> section.
-		</p><br>
+    (<a href="http://www.civicdb.org">www.civicdb.org</a>). I have published 70+ papers with major areas of focus in precision medicine, AML, colon cancer, lung cancer, cancer genomics, 
+    cancer biomarkers, sequence analysis, alternative splicing, and immunotherapy. The following paragraphs describe some general contributions to science and provide an overview of 
+    my current research interests. For more specific details refer to the <a href="publications.htm">publications</a> section.
+	</p><br>
 		
-		<p class="Indented12LR_bold">Genomics technology</p>
+	<p class="Indented12LR_bold">Genomics technology</p>
     <p class="Indented12LR">
     For the past 12 years I have worked continuously at two large-scale genome sequencing and analysis centers.  Early access to new technologies has allowed me to develop cutting edge 
     approaches for genome, transcriptome, and epigenome analysis.  For example, I helped to develop some of the first massively parallel sequencing assays for microRNAs, alternative 
     expression analysis of RNA-seq data, copy number variant analysis by tumor whole genome sequencing, RNA-seq and cDNA capture of challenging archival (FFPE) clinical samples, and 
     epigenetic profiling by ChIP-seq.
-		</p><br>
+	</p><br>
 		
 		<p class="Indented12LR_bold">Alternative splicing and gene regulation</p>
     <p class="Indented12LR">
@@ -92,7 +93,7 @@
     mine RNA-seq data (<a href="http://www.alexaplatform.org/alexa_seq/">www.alexaplatform.org/alexa_seq/</a>). I have since applied these approaches to address several specific 
     biological questions relating to the mechanisms of RNA transcript processing and aberrant RNA splicing observed in tumors, particularly blood cancers where mutations in certain 
     splicing factors such as U2AF1 are common.
-		</p><br>
+	</p><br>
     
     <p class="Indented12LR_bold">Bioinformatics</p>
     <p class="Indented12LR">
@@ -103,7 +104,7 @@
     and open-access resource to define a community consensus on the clinical interpretation of variants in cancer (<a href="http://www.civicdb.org">www.civicdb.org</a>).  A theme of all 
     of these efforts is transparent development including version tracked source code and unrestrictive licensing of both the code and the content produced so that the community can benefit 
     most efficiently from this work.
-		</p><br>
+	</p><br>
     
     <p class="Indented12LR_bold">Cancer biology</p>
     <p class="Indented12LR">
@@ -111,7 +112,15 @@
     biology and to translate discoveries into improved outcomes for patients suffering from cancer.  I have applied these new methods to address specific biological questions in 
     several cancer types and treatment scenarios. These studies range from creating the first genomic landscapes of some cancer types such as lung cancer, to pursuing specific candidate 
     biomarkers of therapeutic resistance in colon cancer, to defining the clonal architecture of AML.
-		</p><br>
+	</p><br>
+
+    <p class="Indented12LR_bold">Personalized immunotherapies</p>
+    <p class="Indented12LR">
+    Over the past two years I have actively pursued the emerging field of immunogenomics in which we use genomic profiling to understand and harness the anti-tumor potential of the 
+    adaptive immune system. Initially, I have applied my expertise in biomarker discovery to identify predictors of response to checkpoint blockade inhibition therapy. More recently, 
+    I have also developed expertise and bioinformatics approaches for the design and evaluation of personalized cancer vaccines consisting of tumor neoantigens predicted to induce a 
+    T-cell response. I am currently a sub-investigator on seven  clinical trials involving personalized cancer vaccines where my lab supports design of the vaccines.
+	</p><br>
 
     <p class="Indented12LR_bold">Precision medicine</p>
     <p class="Indented12LR">
@@ -120,10 +129,10 @@
     personalize therapy based on the analysis of this data. In 2011, I helped to lead the analysis of a second case that lead to a widely reported discovery of aberrant FLT3 over-expression 
     and unique therapeutic intervention in a case of adult ALL. Since those two cases I have continued to focus on the work needed to make clinical genome sequencing of individual patients 
     a reality. To date, I have contributed to the analysis of hundreds of tumors representing more than ten tumor types in collaboration with over a dozen clinicians.
-		</p><br>
+	</p><br>
 		
-		<br>
-		</td>
+	<br>
+	</td>
 	</tr>
 </table>
 
