update funding logo

--- a/funding.htm
+++ b/funding.htm
@@ -96,6 +96,12 @@
 <!--- table of logos for past support -->
 <table cellpadding="0" cellspacing="0" width="752" class="Content">
 	<tr align="center">
+		<td><a href="https://www.stlouischildrens.org/about-us/childrens-discovery-institute"><img src="images/children_discovery_institute_logo.gif" width="130" hspace="0" alt="CDI logo" class="Pic_unbordered"></a></td> <!-- CDI -->
+		<td><a href="https://www.jimmyv.org/"><img src="images/v_foundation_logo.png" width="200" hspace="0" alt="V Foundation logo" class="Pic_unbordered"></a></td> <!-- V Foundation -->
+		<td><a href="https://icts.wustl.edu/"><img src="images/icts-logo.png" width="250" hspace="0" align="absmiddle" alt="ICTS logo" class="Pic_unbordered" style="background-color:white;"></a></td> <!-- ICTS -->
+	</tr>
+
+	<tr align="center">
 		<td><a href="http://www.nserc-crsng.gc.ca"><img src="images/nserc.gif" width="130" hspace="0" alt="NSERC logo" class="Pic_unbordered"></a></td> <!-- NSERC -->
 		<td><a href="https://www.genome.gov/"><img src="images/200px-US-NIH-NHGRI-Logo.svg.png" width="200" height="67" hspace="0" align="absmiddle" alt="NHGRI logo" class="Pic_unbordered" style="background-color:white;"></a></td> <!-- NHGRI -->
 		<td><a href="http://www.ncic.cancer.ca/"><img src="images/NCIC_small.jpg" width="250" hspace="0" alt="NCIC logo" class="Pic_unbordered"></a></td> <!-- NCIC -->
