--- a/cv.htm
+++ b/cv.htm
@@ -65,7 +65,7 @@
 			I am now employeed as an Assistant Professor of Medicine (and Genetics) and as an Assistant Director of the McDonnell Genome 
             Institute at Washington University School of Medicine. My research program is focused on the use of genomics, immunogenomics, and 
             bioinformatics methods for the development of precision medicine in cancer. 
-            For more details refer to the <a href="research.htm">research</a> and <a href="publications">publications</a> sections. 
+            For more details refer to the <a href="research.htm">research</a> and <a href="publications.htm">publications</a> sections. 
         </p><br>
         
 		<p class="Indented12LR_bold">Online profiles</p>        
